<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="buttons_rect_bottom_center">Bottom</string>
    <string name="buttons_rect_bottom_left">Bottom left</string>
    <string name="buttons_rect_bottom_right">Bottom right</string>
    <string name="buttons_rect_left_bottom">Bottom, left side</string>
    <string name="buttons_rect_left_center">Center left</string>
    <string name="buttons_rect_left_top">Top, left side</string>
    <string name="buttons_rect_right_bottom">Bottom, right side</string>
    <string name="buttons_rect_right_center">Center right</string>
    <string name="buttons_rect_right_top">Top, right side</string>
    <string name="buttons_rect_top_center">Top</string>
    <string name="buttons_rect_top_left">Top left</string>
    <string name="buttons_rect_top_right">Top right</string>
    <string name="buttons_round_bottom_center">Bottom</string>
    <string name="buttons_round_bottom_left">Bottom left</string>
    <string name="buttons_round_bottom_left_lower">Bottom left, lower</string>
    <string name="buttons_round_bottom_left_upper">Bottom left, upper</string>
    <string name="buttons_round_bottom_right">Bottom right</string>
    <string name="buttons_round_bottom_right_lower">Bottom right, lower</string>
    <string name="buttons_round_bottom_right_upper">Bottom right, upper</string>
    <string name="buttons_round_center_left">Center left</string>
    <string name="buttons_round_center_right">Center right</string>
    <string name="buttons_round_top_center">Top</string>
    <string name="buttons_round_top_left">Top left</string>
    <string name="buttons_round_top_left_lower">Top left, lower</string>
    <string name="buttons_round_top_left_upper">Top left, upper</string>
    <string name="buttons_round_top_right">Top right</string>
    <string name="buttons_round_top_right_lower">Top right, lower</string>
    <string name="buttons_round_top_right_upper">Top right, upper</string>
    <string name="dismiss_overlay_button_label">Quit</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_yes">Yes</string>
    <string name="navigation_drawer_content_description">Navigation drawer</string>
    <string name="time_difference_now">Now</string>
    <string name="time_difference_short_days_and_hours">%1$s %2$s</string>
    <string name="time_difference_short_hours_and_minutes">%1$s %2$s</string>
    <string name="battery_saver_on_card_3_rows">Battery saver switched on. Location tracking stopped.</string>
    <string name="battery_saver_on_toast_2_rows">Battery saver switched on. Location tracking stopped.</string>
    <string name="ble_sensor_connected_1_row">%1$s connected</string>
    <string name="ble_sensor_pairing_confirmation_2_rows">"Pair
%1$s?"</string>
    <string name="exe_summary_feedback_names__01_3_rows">Maximum training +</string>
    <string name="exe_summary_feedback_names__02_3_rows">Maximum training</string>
    <string name="exe_summary_feedback_names__03_3_rows">Maximum &amp; Tempo training</string>
    <string name="exe_summary_feedback_names__04_3_rows">Tempo &amp; Maximum training</string>
    <string name="exe_summary_feedback_names__05_3_rows">Tempo training +</string>
    <string name="exe_summary_feedback_names__06_3_rows">Tempo training</string>
    <string name="exe_summary_feedback_names__07_3_rows">Tempo &amp; Steady state training</string>
    <string name="exe_summary_feedback_names__08_3_rows">Steady state &amp; Tempo training</string>
    <string name="exe_summary_feedback_names__09_3_rows">Steady state training +</string>
    <string name="exe_summary_feedback_names__10_3_rows">Steady state training</string>
    <string name="exe_summary_feedback_names__11_3_rows">Steady state &amp; Basic training, long</string>
    <string name="exe_summary_feedback_names__12_3_rows">Steady state &amp; Basic training</string>
    <string name="exe_summary_feedback_names__13_3_rows">Basic &amp; Steady state training, long</string>
    <string name="exe_summary_feedback_names__14_3_rows">Basic &amp; Steady state training</string>
    <string name="exe_summary_feedback_names__15_3_rows">Basic training, long</string>
    <string name="exe_summary_feedback_names__16_3_rows">Basic training</string>
    <string name="exe_summary_feedback_names__17_3_rows">Recovery training</string>
    <string name="exe_summary_start_date_and_time_1_row">%1$s %2$s</string>
    <string name="exe_summary_styles_backstrocke">Backstroke</string>
    <string name="exe_summary_styles_breaststroke">Breaststroke</string>
    <string name="exe_summary_styles_butterfly">Butterfly</string>
    <string name="exe_summary_styles_freestyle">Freestyle</string>
    <string name="exe_summary_styles_other">Other style</string>
    <string name="exe_summary_swimming_rest_time">Rest time</string>
    <string name="exe_summary_swimming_styles">Styles</string>
    <string name="exe_target_calorie_cal_reached_4_rows">You have reached your %1$s Cal target!</string>
    <string name="exe_target_calorie_kcal_reached_4_rows">You have reached your %1$s kcal target!</string>
    <string name="exe_target_distance_km_reached_4_rows">You have reached your %1$s km target!</string>
    <string name="exe_target_distance_mi_reached_4_rows">You have reached your %1$s mi target!</string>
    <string name="exe_target_doubled_4_rows">Wow! You have doubled your target!</string>
    <string name="exe_target_duration_reached_4_rows">You have reached your %1$s target!</string>
    <string name="exe_target_phase_multi_zone_1_row">Zones %1$d-%2$d</string>
    <string name="exe_target_phase_no_limits_1_row">No limits</string>
    <string name="exe_target_phase_single_zone_1_row">Zone %1$d</string>
    <string name="exe_target_phased_training_completed_2_rows">%1$s completed</string>
    <string name="exe_target_reached_already_1_row">Reached already</string>
    <string name="exe_target_select_favorite_1_row">Select favorite</string>
    <string name="exe_target_select_target_1_row">Select target</string>
    <string name="exe_target_your_target_1_row">Your target</string>
    <string name="exe_view_Altitude_1_row">Altitude</string>
    <string name="exe_view_alap_ascent">A. lap ascent</string>
    <string name="exe_view_alap_avg_heartrate_1_row">A. lap HR avg</string>
    <string name="exe_view_alap_avg_pace_1_row">A. lap pace avg</string>
    <string name="exe_view_alap_avg_speed_1_row">A. lap speed avg</string>
    <string name="exe_view_alap_descent">A. lap descent</string>
    <string name="exe_view_alap_distance_1_row">A. lap distance</string>
    <string name="exe_view_alap_max_heartrate_1_row">A. lap HR max</string>
    <string name="exe_view_alap_max_pace_1_row">A. lap pace max</string>
    <string name="exe_view_alap_max_speed_1_row">A. lap speed max</string>
    <string name="exe_view_ascent">Ascent</string>
    <string name="exe_view_distance_1_row">Distance</string>
    <string name="exe_view_distance_unit_km_1_row">km</string>
    <string name="exe_view_distance_unit_m_1_row">m</string>
    <string name="exe_view_item_label_calories_1_row">Calories</string>
    <string name="exe_view_rest_time">Rest time</string>
    <string name="exe_view_speed_1_row">Speed</string>
    <string name="exe_view_swimming">Swimming</string>
    <string name="exe_view_unit_kcal_1_row">kcal</string>
    <string name="exe_view_unit_min">min</string>
    <string name="exe_view_unit_speed_km_per_hour_1_row">km/h</string>
    <string name="myday_sleep_duration_unit_hours_1_row">h</string>
    <string name="myday_sleep_duration_unit_minutes_1_row">min</string>
    <string name="notification_activity_goal_reached_5_rows">You’ve reached your goal!</string>
    <string name="daily_goal_reached_percent_value">100</string>
    <string name="exe_view_distance_fraction_default">.00</string>
    <string name="exe_view_fat_consumption_unknown">−−</string>
    <string name="exe_view_lap_duration_default">−−:−−</string>
    <string name="exe_view_lap_number_undefined">−−</string>
    <string name="exe_view_one_digit_default">0</string>
    <string name="exe_view_percentage_of_max_1_row">%</string>
    <string name="exe_view_speed_offline_value">−−.−</string>
    <string name="exe_view_three_digit_default">000</string>
    <string name="glyph_ascent"></string>
    <string name="glyph_cadence"></string>
    <string name="glyph_distance_left"></string>
    <string name="glyph_fat_consumption"></string>
    <string name="glyph_play"></string>
    <string name="glyph_previous"></string>
    <string name="glyph_skip"></string>
    <string name="glyph_sleep_2"></string>
    <string name="glyph_speed"></string>
    <string name="glyph_time_left"></string>
</resources>