<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/itemDistanceHalf" style="@style/DisplayItemStyle.Layout.Vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textDistanceTitle" android:text="@string/exe_view_distance_1_row" style="@style/ItemTextStyle.Title.Half.WithMargins" />
    <LinearLayout style="@style/DisplayItemStyle.Layout.Horizontal">
        <FrameLayout style="@style/DisplayItemStyle.PrimaryTextContainer">
            <TextView android:id="@id/textDistance" android:text="@string/exe_view_three_digit_default" style="@style/ItemTextStyle.Primary.Half" />
        </FrameLayout>
        <FrameLayout android:layout_width="@dimen/item_quarter_secondary_text_zone_width" android:layout_height="fill_parent">
            <TextView android:id="@id/textDistanceUnit" android:text="@string/exe_view_distance_unit_km_1_row" style="@style/ItemTextStyle.Units" />
            <TextView android:id="@id/textDistanceFraction" android:visibility="gone" android:text="@string/exe_view_distance_fraction_default" android:paddingStart="0.0dip" style="@style/ItemTextStyle.Secondary.Half" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>