<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/itemAscentDescentQuarter" android:background="?colorItemDistanceBackground" android:layout_height="@dimen/item_quarter_one_fourth_of_display_height" style="@style/DisplayItemStyle.Layout.Horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:polar="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/viewAscentDescent" style="@style/DisplayItemStyle.ImageContainer">
        <fi.polar.polarflow.ui.custom.ImageOrGlyphView android:id="@id/imgAscentDescent" polar:drawable="?exeIconAscent" polar:glyph="@string/glyph_ascent" style="@style/DisplayItemStyle.Image.InContainer" />
        <TextView android:id="@id/textLapNumber" android:text="@string/exe_view_lap_number_undefined" style="@style/ItemTextStyle.SmallLabel.WithBackground.Bottom" />
    </FrameLayout>
    <FrameLayout style="@style/DisplayItemStyle.PrimaryTextContainer">
        <TextView android:id="@id/textValue" android:text="@string/exe_view_one_digit_default" style="@style/ItemTextStyle.Primary.Quarter" />
    </FrameLayout>
    <FrameLayout android:layout_width="@dimen/item_quarter_secondary_text_zone_width" android:layout_height="fill_parent">
        <TextView android:id="@id/textUnitSystem" android:background="@null" android:text="@string/exe_view_distance_unit_m_1_row" style="@style/ItemTextStyle.Units" />
    </FrameLayout>
</LinearLayout>