<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/itemCaloriesHalf" style="@style/DisplayItemStyle.Layout.Vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/textCaloriesTitle" android:text="@string/exe_view_item_label_calories_1_row" style="@style/ItemTextStyle.Title.Half.WithMargins" />
    <LinearLayout style="@style/DisplayItemStyle.Layout.Horizontal">
        <FrameLayout style="@style/DisplayItemStyle.PrimaryTextContainer">
            <TextView android:id="@id/textCalories" android:text="@string/exe_view_one_digit_default" style="@style/ItemTextStyle.Primary.Half" />
        </FrameLayout>
        <TextView android:id="@id/textUnitsCalories" android:text="@string/exe_view_unit_kcal_1_row" style="@style/ItemTextStyle.Units" />
    </LinearLayout>
</LinearLayout>