<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/itemDistanceQuarter" android:layout_height="@dimen/item_quarter_one_fourth_of_display_height" style="@style/DisplayItemStyle.Layout.Horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:polar="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/viewDistance" style="@style/DisplayItemStyle.ImageContainer">
        <fi.polar.polarflow.ui.custom.ImageOrGlyphView android:id="@id/imgDistance" polar:drawable="?exeIconDistanceLeft" polar:glyph="@string/glyph_distance_left" style="@style/DisplayItemStyle.Image.InContainer" />
    </FrameLayout>
    <FrameLayout style="@style/DisplayItemStyle.PrimaryTextContainer">
        <TextView android:id="@id/textDistance" android:text="@string/exe_view_three_digit_default" style="@style/ItemTextStyle.Primary.Quarter" />
    </FrameLayout>
    <FrameLayout android:layout_width="@dimen/item_quarter_secondary_text_zone_width" android:layout_height="fill_parent">
        <TextView android:textSize="@dimen/item_quarter_distance_text_size" android:id="@id/textDistanceFraction" android:visibility="gone" android:layout_marginTop="6.0dip" android:text="@string/exe_view_distance_fraction_default" android:paddingStart="0.0dip" style="@style/ItemTextStyle.Secondary.Quarter" />
        <TextView android:id="@id/textDistanceUnit" android:background="@null" android:text="@string/exe_view_distance_unit_km_1_row" style="@style/ItemTextStyle.Units" />
    </FrameLayout>
</LinearLayout>