<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/itemRestTimeQuarter" style="@style/DisplayItemStyle.Layout.Horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:polar="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/viewRestTime" style="@style/DisplayItemStyle.ImageContainer">
        <fi.polar.polarflow.ui.custom.ImageOrGlyphView android:id="@id/imgRestTime" polar:drawable="?exeIconRestTime" polar:glyph="@string/glyph_time_left" style="@style/DisplayItemStyle.Image.InContainer" />
    </FrameLayout>
    <FrameLayout android:id="@id/timeContainer" style="@style/DisplayItemStyle.PrimaryTextContainer">
        <TextView android:id="@id/textHoursMinutes" android:text="@string/exe_view_lap_duration_default" style="@style/ItemTextStyle.Primary.Quarter" />
    </FrameLayout>
    <FrameLayout android:id="@id/swimmingTextContainer" style="@style/DisplayItemStyle.PrimaryTextContainer">
        <TextView android:text="@string/exe_view_swimming" style="@style/ItemTextStyle.RestTimeText" />
    </FrameLayout>
    <TextView android:id="@id/textSeconds" style="@style/ItemTextStyle.Secondary.Quarter" />
</LinearLayout>