<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/itemCadenceQuarter" android:background="?colorItemHeartrateBackground" style="@style/DisplayItemStyle.Layout.Horizontal"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:polar="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/viewCadence" style="@style/DisplayItemStyle.ImageContainer">
        <fi.polar.polarflow.ui.custom.ImageOrGlyphView android:id="@id/imgCadence" polar:drawable="?exeIconCadence" polar:glyph="@string/glyph_cadence" style="@style/DisplayItemStyle.Image.InContainer" />
        <TextView android:id="@id/textCadenceType" style="@style/ItemTextStyle.SmallLabel.WithBackground" />
        <TextView android:id="@id/textLapNumber" android:text="@string/exe_view_lap_number_undefined" style="@style/ItemTextStyle.SmallLabel.WithBackground.Bottom" />
    </FrameLayout>
    <FrameLayout style="@style/DisplayItemStyle.PrimaryTextContainer">
        <TextView android:id="@id/textCadence" android:text="@string/exe_view_one_digit_default" style="@style/ItemTextStyle.Primary.Quarter" />
    </FrameLayout>
    <TextView android:id="@id/textCadenceUnits" style="@style/ItemTextStyle.Units" />
</LinearLayout>