<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:id="@id/itemSleepTitle" style="@style/SleepItemStyle.Container.Half"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:polar="http://schemas.android.com/apk/res-auto">
    <FrameLayout style="@style/SleepItemStyle.Layout">
        <fi.polar.polarflow.ui.custom.PolarGlyphView android:layout_gravity="center" android:id="@id/sleepGlyph" android:background="@drawable/myday_sleep_item_title_glyph_background" android:layout_width="@dimen/sleep_item_title_glyph_background_size" android:layout_height="@dimen/sleep_item_title_glyph_background_size" polar:glyph="@string/glyph_sleep_2" polar:glyphSize="@dimen/sleep_item_title_glyph_size" />
    </FrameLayout>
    <LinearLayout android:gravity="bottom|center" android:layout_width="wrap_content" style="@style/SleepItemStyle.Layout.Horizontal">
        <TextView android:id="@id/sleepDurationHours" style="@style/SleepItemTextStyle.BigNumbers" />
        <TextView android:id="@id/sleepDurationHoursUnits" android:text="@string/myday_sleep_duration_unit_hours_1_row" style="@style/SleepItemTextStyle.BigUnits" />
        <TextView android:id="@id/sleepDurationMinutes" style="@style/SleepItemTextStyle.BigNumbers" />
        <TextView android:id="@id/sleepDurationMinutesUnits" android:text="@string/myday_sleep_duration_unit_minutes_1_row" style="@style/SleepItemTextStyle.BigUnits" />
    </LinearLayout>
</LinearLayout>