<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/itemRestTimeFull" style="@style/DisplayItemStyle.Layout.Vertical.Full"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout style="@style/DisplayItemStyle.LabelContainer">
        <TextView android:id="@id/textLapLabel" android:text="@string/exe_view_rest_time" style="@style/ItemTextStyle.Title.Full" />
    </RelativeLayout>
    <LinearLayout style="@style/DisplayItemStyle.Layout.Horizontal">
        <RelativeLayout android:id="@id/timeContainer" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textSize="@dimen/item_full_lap_primary_text_size" android:id="@id/textHoursMinutes" android:layout_marginTop="-3.0dip" android:text="@string/exe_view_lap_duration_default" android:layout_toStartOf="@id/textSeconds" style="@style/ItemTextStyle.Primary" />
            <TextView android:id="@id/textSeconds" android:layout_width="@dimen/item_full_lap_secondary_1digit_text_zone_width" android:layout_alignBaseline="@id/textHoursMinutes" android:layout_alignParentEnd="true" style="@style/ItemTextStyle.Secondary.Full" />
        </RelativeLayout>
        <FrameLayout android:id="@id/swimmingTextContainer" android:layout_marginTop="8.0dip" android:layout_marginStart="30.0dip" style="@style/DisplayItemStyle.PrimaryTextContainer">
            <TextView android:gravity="center|top" android:text="@string/exe_view_swimming" style="@style/ItemTextStyle.RestTimeText" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>