<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/dailyGoalReachedActivity" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <fi.polar.polarflow.ui.custom.ballswirl.BallSwirlView android:id="@id/ballSwirlView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:layout_gravity="center" android:id="@id/goalReachedPercent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/daily_goal_reached_percent_value_textSize" android:textColor="@color/daily_goal_reached_percent_color" android:id="@id/goalReachedPercentValue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/daily_goal_reached_percent_value" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/daily_goal_reached_percent_unit_textSize" android:textColor="@color/daily_goal_reached_percent_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/exe_view_percentage_of_max_1_row" android:layout_alignBaseline="@id/goalReachedPercentValue" android:layout_toEndOf="@id/goalReachedPercentValue" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/daily_goal_reached_text_textSize" android:gravity="center" android:layout_gravity="center" android:id="@id/goalReachedText" android:visibility="gone" android:layout_width="@dimen/daily_goal_reached_text_layout_width" android:layout_height="wrap_content" android:text="@string/notification_activity_goal_reached_5_rows" android:maxLines="5" />
</FrameLayout>