<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:polar="http://schemas.android.com/apk/res-auto">
    <View android:layout_gravity="center" android:id="@id/clickAnimationView" android:background="@drawable/shader_click_bg" android:layout_width="1.0dip" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:id="@id/titleText" android:layout_marginTop="3.0dip" style="@style/ShaderStyle.Title" />
        <TextView android:id="@id/detailText" android:layout_marginTop="-2.0dip" style="@style/ShaderStyle.Description" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <fi.polar.polarflow.ui.custom.PolarGlyphView android:id="@id/buttonSkipPrevious" android:background="@drawable/shader_button_small_bg" android:layout_centerVertical="true" android:layout_alignParentStart="true" polar:glyph="@string/glyph_previous" polar:glyphSize="26.0dip" style="@style/ShaderStyle.SmallButtonWithElevation" />
            <fi.polar.polarflow.ui.custom.PolarGlyphView android:id="@id/buttonPlay" android:background="@drawable/shader_button_bg" android:visibility="gone" android:layout_centerInParent="true" polar:glyph="@string/glyph_play" polar:glyphSize="44.0dip" style="@style/ShaderStyle.ButtonWithElevation" />
            <fi.polar.polarflow.ui.custom.PolarGlyphView android:id="@id/buttonSkipNext" android:background="@drawable/shader_button_small_bg" android:layout_centerVertical="true" android:layout_alignParentEnd="true" polar:glyph="@string/glyph_skip" polar:glyphSize="26.0dip" style="@style/ShaderStyle.SmallButtonWithElevation" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>